# delta-spark-handbook

./: .gitignore  Makefile  README.md  checksums.txt  docker-compose-memory.yml  docker-compose.duckdb.yml  docker-compose.kyuubi.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  large-files.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.duckdb  Dockerfile.hive  Dockerfile.kyuubi  devcontainer.json  docker-compose.extend.yml  docker-compose.yml  entrypoint.sh
accelerator/materials/1-getting-started/: example.ipynb  readme.md
accelerator/materials/1-getting-started/notebooks/: example.ipynb  test-kyuubi.ipynb  test-spark.ipynb  test-spark_simple.ipynb
accelerator/materials/1-getting-started/spark_apps/: csv_to_delta.py
accelerator/materials/1-getting-started/test-data/: people-100.csv
accelerator/materials/2-ehr/: readme.md
accelerator/materials/2-ehr/notebooks/: 0_databricks_project_setup.ipynb  0_delta_recovery.ipynb  0_recreate_tables_ehr.sql  0_recreate_tables_omop531.sql  1_data_ingest_ehr.py  1_ehr_data_ingest.py  1_ehr_synthea_ingest.ipynb  1_ehr_synthea_ingest.py  1_ingest_ehr.ipynb  1_ingest_ehr.py  4_ehr_OMOP_etl.ipynb  (+3 more)
c1_core/: __main__.py
c1_core/aws_storage_service/: __init__.py  aws_storage_bucket.py  aws_storage_file.py
c1_core/c1_log_service/: __init__.py  environment_logging.py  environment_tracing.py
c1_core/delta_lake_service/: __init__.py  delta_session.py  delta_table.py
delta-sharing-conf/: delta-sharing-server-config.yaml  delta_sharing_profile.json
duckdb-config/: duckdb.conf  server.py
hadoop-conf/: core-site.xml
hive-config/: entrypoint.sh  hive-site.xml  log4j2.properties
kyuubi-conf/: kyuubi-defaults copy.conf  kyuubi-defaults.conf  kyuubi-defaults.conf.bak
mk/: delta.mk  docusaurus.mk  git.mk  hive.mk  kyubbi.mk  kyuubi.mk  local.mk  minio.mk  nginx.mk  node.mk  spark.mk
mk-docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
mk-docs/docs/: intro.mdx  more.md
mk-docs/docs/intro/: markdown-features.mdx  why-communityone-for-engineers.md  why-communityone-for-executives.md
mk-docs/docs/products/: delta_spark_overview.mdx  product_overview.md
mk-docs/docs/solutions/: solution_overview.md
mk-docs/src/css/: custom.css
mk-docs/src/pages/: index.js  index.module.css
spark-conf/: core-site.xml  hive-site.xml  spark-defaults copy.conf  spark-defaults.conf  spark-env.sh
tests/: __init__.py  conftest.py  test_delta_sharing.py
tests/aws_storage_service/: __init__.py  test_aws_storage_bucket.py  test_minio_connection.py
(+6 files in other folders)
